# NetSim

./: CMakeLists.txt  main.cpp
include/: factory.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: test_factory_io.cpp  test_package.cpp  test_reports.cpp  test_storage_types.cpp
